--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,12 @@ code {
 body {
   background: rgb(27, 28, 29) !important;
 }
+
+%h3{
+  color: white;
+}
+
+::selection {
+  background-color: pink !important;
+  color: rgba(0,0,0,.87);
+}
