--- a/src/index.css
+++ b/src/index.css
@@ -17,9 +17,9 @@ body {
   background: rgb(27, 28, 29) !important;
 }
 
-%h3{
+/* %h3 {
   color: white;
-}
+} */
 
 ::selection {
   background-color: pink !important;
