--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,12 @@
   color: #61dafb;
 }
 
+.background-image {
+  background-image: url("images/houndstooth-pattern.png");
+  background-repeat: repeat;
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
