css framework free

--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,11 @@
     transform: rotate(360deg);
   }
 }
+
+p {
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
