adjust styling on welcome screen

--- a/src/index.css
+++ b/src/index.css
@@ -14,9 +14,9 @@ code {
     monospace;
 }
 
-/* %h3 {
-  color: white;
-} */
+html {
+  scroll-behavior: smooth;
+}
 
 ::selection {
   background-color: pink !important;
